Add multi enterprise